scratch/oxcaml_research/recovery/r2_env_error/results/negative_raw_cause_error.log
File "scratch/oxcaml_research/recovery/r2_env_error/negative_raw_cause_error.ml", line 15, characters 9-71:
15 |          Parallel.fork_join2 parallel (fun _ -> cause) (fun _ -> cause))))
              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error: This expression has type
         "#(string Effet.Cause.t * string Effet.Cause.t)"
       but an expression was expected of type "('a : value)"
       The layout of #(string Effet.Cause.t * string Effet.Cause.t) is 
           value & value
         because it is an unboxed tuple.
       But the layout of #(string Effet.Cause.t * string Effet.Cause.t) must be a sublayout of
         value.
